--- a/CODIGO/index.html
+++ b/CODIGO/index.html
@@ -35,7 +35,7 @@
 	<script type="text/javascript" src="./js_app/Textos_ES.js"></script>
 	<script type="text/javascript" src="./js_app/Textos_EN.js"></script>
 
-	<!-- DATOS ALUMNO Y OTROS FICHEROS -->
+	<!-- CREACIÓN DEL FORM -->
 	<script type="text/javascript" src="./js_app/crearForm.js"></script>
 	<script type="text/javascript" src="./js_app/colocador_valores.js"></script>
 
